# sem-image-classifier-api

./: .dockerignore  .gitignore  Containerfile  NOTICE  README.md  pyproject.toml
db/: schema.sql
docs/: MODEL_MIGRATION.md
gateway/: krakend.tmpl
gateway/plugin/: go.mod  main.go
gateway/settings/: settings.json
gateway/templates/: auth.tmpl  bentoml_endpoints.tmpl
k8s/: dev.sh
k8s/env/dev/: cluster.env  secrets.yaml
k8s/env/prod/: bentoml-config.yaml  cluster.env  gateway-settings.json  secrets.yaml
k8s/manifests/: 01-redis.yaml  02-bentoml.yaml  03-postgresql.yaml  04-mock-oidc.yaml  05-krakend.yaml  06-ingress.yaml  07-networkpolicies.yaml  08-hpa.yaml
scripts/: stress_test_api.py  usage_report.py
src/: image_service.py  model_service.py  redis_queue.py  service.py
tests/: test_api.py
